--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "bootstrap": "^5.3.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slot-counter": "^2.2.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "routes": "^2.1.0",
+    "start": "^5.1.0",
     "swiper": "^10.3.1",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4",
